# ChangeLog for net-p2p/linuxdcpp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/linuxdcpp/ChangeLog,v 1.1 2007/01/17 12:40:21 armin76 Exp $

*linuxdcpp-20070117 (17 Jan 2007)

  17 Jan 2007; Raúl Porcel <armin76@gentoo.org> +metadata.xml,
  +linuxdcpp-20070117.ebuild:
  New ebuild, bug 102733
