@@ -3,10 +3,14 @@ EBUILD linuxdcpp-20070117.ebuild 1244 RMD160 fca44e885b40af605d0acd822cef66d8373
 MD5 6f3238c8ab807600d217105d702b0d35 linuxdcpp-20070117.ebuild 1244
 RMD160 fca44e885b40af605d0acd822cef66d83732e078 linuxdcpp-20070117.ebuild 1244
 SHA256 ad8b4dc7394f06d39168d109dd3ee333fdf92fbcd97a5c856416475dc0c040fe linuxdcpp-20070117.ebuild 1244
-MISC ChangeLog 363 RMD160 8ac4ba3fd021f2f457b6618a6ae68b7749a46375 SHA1 b2e11f0b78b7c09b31c6d388a1b6915e32a0b2f9 SHA256 3e0e2ebcec88938f079dca6a9ba21f21afabc3ffe8f2373d1ad6df19075dc734
-MD5 c0218fd46973151f8be8a3a4feadbf86 ChangeLog 363
-RMD160 8ac4ba3fd021f2f457b6618a6ae68b7749a46375 ChangeLog 363
-SHA256 3e0e2ebcec88938f079dca6a9ba21f21afabc3ffe8f2373d1ad6df19075dc734 ChangeLog 363
+EBUILD linuxdcpp-9999.ebuild 1332 RMD160 5972f39dc3c5544711148369e0f2de3980be9b45 SHA1 89bbd9116065b4b656f97f140e00d155130884aa SHA256 dacdc3c6f2311c948380a53fe668b0dcbe5f294352259a84bceca63e649363cf
+MD5 acb1e46be5e932f72db827b5ef38de0a linuxdcpp-9999.ebuild 1332
+RMD160 5972f39dc3c5544711148369e0f2de3980be9b45 linuxdcpp-9999.ebuild 1332
+SHA256 dacdc3c6f2311c948380a53fe668b0dcbe5f294352259a84bceca63e649363cf linuxdcpp-9999.ebuild 1332
+MISC ChangeLog 485 RMD160 43561b85c345265ef4fcd903016536423338f60d SHA1 04e0ab2f1d4a6d0679240d3e0ffb8fb0c5594b90 SHA256 6db3adea3c1fa983d7aaf7a8476aaa32ff7e0e44b14ab40e8e0109a9c9896a49
+MD5 74e090f46a16e0a6889bff5f3f81e45f ChangeLog 485
+RMD160 43561b85c345265ef4fcd903016536423338f60d ChangeLog 485
+SHA256 6db3adea3c1fa983d7aaf7a8476aaa32ff7e0e44b14ab40e8e0109a9c9896a49 ChangeLog 485
 MISC metadata.xml 160 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd SHA1 813ef5bc57f6a8d95e7cab7a745a2a824858f49c SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f
 MD5 8aefbc0e49db723ca1ad02d0c409cd49 metadata.xml 160
 RMD160 828887200387b28c37fc97111fc6bc3a0a2fcccd metadata.xml 160
@@ -14,3 +18,6 @@ SHA256 fe06593409e7f28665c032001005e94cb650299711a0af7f1a558bdb56c4004f metadata
 MD5 ec2fd1ee3104220466404f3375e16b09 files/digest-linuxdcpp-20070117 259
 RMD160 37c131ba74b2dbaa61daac945d33b4003fd1aecd files/digest-linuxdcpp-20070117 259
 SHA256 f7c481f18a3583fe4cd05afdc3bff2902a351406d451ddaf375fb888adfb63a6 files/digest-linuxdcpp-20070117 259
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-linuxdcpp-9999 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-linuxdcpp-9999 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-linuxdcpp-9999 0
